--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://fatimabaghandeh.github.io/shop/",
   "name": "shop",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -23,7 +26,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.22.2",
+    "react-router-dom": "^6.24.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
