--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "font-awesome": "^4.7.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "pwa": "^1.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
